G Plus login added name in Manifest file

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="sid.gpluslogin"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	<!-- Siddhartha Dimania @2014 -->
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
